package ub.edu.model;

public class EstatVist extends Estat {

    public EstatVist () {
        super();
    }

    public DurationEpisodi getTempsVist() { return new DurationEpisodi(0, 0, 0); }
}
